--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
+	<div class="root">%sveltekit.body%</div>
 </body>
 
 </html>
