feat: update header style

--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-
 	<body data-sveltekit-preload-data="hover">
-		<!-- End Google Tag Manager (noscript) -->
-		<div class="root">%sveltekit.body%</div>
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
