--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 		%sveltekit.head%
 	</head>
 	<!-- Google tag (gtag.js) -->
