feat: add style

--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
 	
 	  gtag('config', 'G-1FTY2NCVMW');
 	</script>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-rose-50">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
