--- a/src/app.html
+++ b/src/app.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
-		%sveltekit.head%
-	</head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-1FTY2NCVMW"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	
-	  gtag('config', 'G-1FTY2NCVMW');
-	</script>
-	<body data-sveltekit-preload-data="hover" class="bg-rose-50">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<html lang="zh-Hant-TW" class="sq-full overflow-hidden">
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+	<meta name="viewport" content="width=device-width" />
+	<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
+	%sveltekit.head%
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1FTY2NCVMW"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-1FTY2NCVMW');
+</script>
+
+<body data-sveltekit-preload-data="hover" class="bg-rose-50 sq-full overflow-y-auto" style="scrollbar-gutter: stable">
+	<div class="contents">%sveltekit.body%</div>
+</body>
+
 </html>
