--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 	gtag('config', 'G-1FTY2NCVMW');
 </script>
 
-<body data-sveltekit-preload-data="hover" class="bg-rose-50 sq-full overflow-y-auto" style="scrollbar-gutter: stable both-edges">
+<body data-sveltekit-preload-data="hover" class="bg-rose-50 sq-full overflow-y-auto">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
