fix: scrollbar cover by header

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW" class="sq-full overflow-hidden">
+<html lang="zh-Hant-TW" class="h-full overflow-hidden">
 
 <head>
 	<meta charset="utf-8" />
@@ -18,7 +18,7 @@
 	gtag('config', 'G-1FTY2NCVMW');
 </script>
 
-<body data-sveltekit-preload-data="hover" class="bg-rose-50 sq-full overflow-y-auto">
+<body data-sveltekit-preload-data="hover" class="bg-rose-50 h-full overflow-y-auto">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
