--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 	<meta name="viewport" content="width=device-width" />
-	<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
+	<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
+	<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
 	%sveltekit.head%
 </head>
 <!-- Google tag (gtag.js) -->
