feat: add clarity

--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,13 @@
 
 	gtag('config', 'G-1FTY2NCVMW');
 </script>
+<script type="text/javascript">
+	(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+	})(window, document, "clarity", "script", "kxjq865ckw");
+</script>
 
 <body data-sveltekit-preload-data="hover" class="bg-rose-50 h-full overflow-y-auto">
 	<div class="contents">%sveltekit.body%</div>
