--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW" class="h-full overflow-hidden">
+<html lang="zh-Hant-TW" class="h-full overflow-y-scroll">
 
 <head>
 	<meta charset="utf-8" />
@@ -10,7 +10,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-rose-50 h-full overflow-y-auto">
+<body data-sveltekit-preload-data="hover" class="bg-rose-50 min-h-svh flex flex-col">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
