Update HTML and CSS styles

--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="bg-rose-50 min-h-svh flex flex-col">
+<body data-sveltekit-preload-data="hover">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
