--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,23 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
 	<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
+	<!-- Microsoft Clarity -->
+	<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "l9f70978r0");
+	</script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER08632B9"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-GER08632B9');
+	</script>
 	%sveltekit.head%
 </head>
 
