feat: update font

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
 	<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-tc-web@latest/style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/style.min.css" />
 	<!-- Microsoft Clarity -->
 	<script type="text/javascript">
     (function(c,l,a,r,i,t,y){
