Add font and photo preconnect links

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
 	<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
+	<!-- Font -->
+	<link rel="preconnect" href="//cdnjs.cloudflare.com" crossorigin />
+	<!-- Photo -->
+	<link ref="preconnect" href="//live.staticflickr.com" crossorigin />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/style.min.css" />
 	<!-- Microsoft Clarity -->
 	<script type="text/javascript">
