--- a/src/app.html
+++ b/src/app.html
@@ -1,39 +1,49 @@
-<!DOCTYPE html>
-<html lang="zh-Hant-TW" class="h-full overflow-y-scroll">
+<!doctype html>
+<html lang="zh-Hant-TW" class="h-dvh overflow-y-scroll">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
+		<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
+		<!-- Font -->
+		<link rel="preconnect" href="//cdnjs.cloudflare.com" crossorigin />
+		<!-- Photo -->
+		<link ref="preconnect" href="//live.staticflickr.com" crossorigin />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/style.min.css"
+		/>
+		<!-- Microsoft Clarity -->
+		<script type="text/javascript">
+			(function (c, l, a, r, i, t, y) {
+				c[a] =
+					c[a] ||
+					function () {
+						(c[a].q = c[a].q || []).push(arguments);
+					};
+				t = l.createElement(r);
+				t.async = 1;
+				t.src = 'https://www.clarity.ms/tag/' + i;
+				y = l.getElementsByTagName(r)[0];
+				y.parentNode.insertBefore(t, y);
+			})(window, document, 'clarity', 'script', 'l9f70978r0');
+		</script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER08632B9"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
-	<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
-	<!-- Font -->
-	<link rel="preconnect" href="//cdnjs.cloudflare.com" crossorigin />
-	<!-- Photo -->
-	<link ref="preconnect" href="//live.staticflickr.com" crossorigin />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/style.min.css" />
-	<!-- Microsoft Clarity -->
-	<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "l9f70978r0");
-	</script>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER08632B9"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+			gtag('config', 'G-GER08632B9');
+		</script>
+		%sveltekit.head%
+	</head>
 
-		gtag('config', 'G-GER08632B9');
-	</script>
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div class="contents">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover" class="size-full">
+		<div class="contents">%sveltekit.body%</div>
+	</body>
 </html>
