feat: update style

--- a/src/app.html
+++ b/src/app.html
@@ -10,10 +10,8 @@
 		<link rel="preconnect" href="//cdnjs.cloudflare.com" crossorigin />
 		<!-- Photo -->
 		<link ref="preconnect" href="//live.staticflickr.com" crossorigin />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/lxgw-wenkai-webfont/1.7.0/style.min.css"
-		/>
+		<link rel="preconnect" href="https://fonts.bunny.net">
+		<link href="https://fonts.bunny.net/css?family=noto-serif-tc:300,400,600,700" rel="stylesheet" />
 		<!-- Microsoft Clarity -->
 		<script type="text/javascript">
 			(function (c, l, a, r, i, t, y) {
