--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,11 @@
 		<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
 		<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
 		<!-- Font -->
-		<link rel="preconnect" href="https://fonts.bunny.net">
-		<link href="https://fonts.bunny.net/css?family=noto-serif-tc:300,400,600,700" rel="stylesheet" />
+		<link rel="preconnect" href="https://cdn.jsdelivr.net" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-tc-webfont@1.0.0/style.css"
+		/>
 		<!-- Photo -->
 		<link ref="preconnect" href="//live.staticflickr.com" crossorigin />
 		<!-- Microsoft Clarity -->
