--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-Hant-TW" class="h-dvh overflow-y-scroll">
+<html lang="zh-Hant-TW">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
@@ -43,7 +43,7 @@
 		%sveltekit.head%
 	</head>
 
-	<body data-sveltekit-preload-data="hover" class="size-full">
+	<body data-sveltekit-preload-data="hover">
 		<div class="contents">%sveltekit.body%</div>
 	</body>
 </html>
