--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="alternate" type="application/atom+xml" href="/blog/rss.xml" />
-		<link rel="alternate" type="application/atom+xml" href="/albums/rss.xml" />
+		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 		<!-- Font -->
 		<link rel="preconnect" href="https://cdn.jsdelivr.net" />
 		<link
