--- a/src/app.html
+++ b/src/app.html
@@ -38,7 +38,10 @@
 		%sveltekit.head%
 	</head>
 
-	<body data-sveltekit-preload-data="hover" class="flex min-h-dvh flex-col bg-main font-serif text-main">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="flex min-h-dvh flex-col bg-main font-serif text-main"
+	>
 		<div class="contents">%sveltekit.body%</div>
 	</body>
 </html>
