--- a/src/app.html
+++ b/src/app.html
@@ -8,9 +8,7 @@
 	<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.bunny.net">
-	<link
-		href="https://fonts.bunny.net/css?family=ibm-plex-mono:400,600,700|m-plus-2:400,600,700|noto-sans-tc:400,600,700"
-		rel="stylesheet" />
+	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400,600,700|noto-sans-tc:400,600,700" rel="stylesheet" />
 	<!-- Photo -->
 	<link ref="preconnect" href="https://live.staticflickr.com" crossorigin />
 	<!-- Microsoft Clarity -->
