--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,11 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 	<!-- Font -->
-	<link rel="preconnect" href="https://fonts.bunny.net">
-	<link href="https://fonts.bunny.net/css?family=ibm-plex-mono:400,600,700|noto-sans-tc:400,600,700" rel="stylesheet" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Noto+Sans+TC:wght@100..900&display=swap"
+		rel="stylesheet">
 	<!-- Photo -->
 	<link ref="preconnect" href="https://live.staticflickr.com" crossorigin />
 	<!-- Microsoft Clarity -->
