feat: add font plugin and implement theme cookie management

--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,8 @@
 	<!-- Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Noto+Sans+TC:wght@100..900&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800" rel="stylesheet">
+	%font-subset%
 	<!-- Photo -->
 	<link ref="preconnect" href="https://live.staticflickr.com" crossorigin />
 	<!-- Microsoft Clarity -->
@@ -43,7 +42,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="flex min-h-dvh flex-col bg-main text-main">
+<body data-sveltekit-preload-data="hover" class="min-h-dvh bg-main text-main">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
