fix: update body class

--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" class="min-h-dvh bg-main text-main">
+<body data-sveltekit-preload-data="hover" class="min-h-dvh bg-main text-main flex flex-col">
 	<div class="contents">%sveltekit.body%</div>
 </body>
 
