--- a/src/app.html
+++ b/src/app.html
@@ -1,49 +1,50 @@
 <!doctype html>
 <html lang="zh-Hant-TW" data-theme="%cookie-theme%">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
+		<!-- Font -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800"
+			rel="stylesheet"
+		/>
+		%font-subset%
+		<!-- Photo -->
+		<link ref="preconnect" href="https://live.staticflickr.com" crossorigin />
+		<!-- Microsoft Clarity -->
+		<script type="text/javascript">
+			(function (c, l, a, r, i, t, y) {
+				c[a] =
+					c[a] ||
+					function () {
+						(c[a].q = c[a].q || []).push(arguments);
+					};
+				t = l.createElement(r);
+				t.async = 1;
+				t.src = 'https://www.clarity.ms/tag/' + i;
+				y = l.getElementsByTagName(r)[0];
+				y.parentNode.insertBefore(t, y);
+			})(window, document, 'clarity', 'script', 'l9f70978r0');
+		</script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER08632B9"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
-	<!-- Font -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800" rel="stylesheet">
-	%font-subset%
-	<!-- Photo -->
-	<link ref="preconnect" href="https://live.staticflickr.com" crossorigin />
-	<!-- Microsoft Clarity -->
-	<script type="text/javascript">
-		(function (c, l, a, r, i, t, y) {
-			c[a] =
-				c[a] ||
-				function () {
-					(c[a].q = c[a].q || []).push(arguments);
-				};
-			t = l.createElement(r);
-			t.async = 1;
-			t.src = 'https://www.clarity.ms/tag/' + i;
-			y = l.getElementsByTagName(r)[0];
-			y.parentNode.insertBefore(t, y);
-		})(window, document, 'clarity', 'script', 'l9f70978r0');
-	</script>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER08632B9"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
+			gtag('config', 'G-GER08632B9');
+		</script>
+		%sveltekit.head%
+	</head>
 
-		gtag('config', 'G-GER08632B9');
-	</script>
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover" class="min-h-dvh bg-main text-main flex flex-col">
-	<div class="contents">%sveltekit.body%</div>
-</body>
-
+	<body data-sveltekit-preload-data="hover" class="flex min-h-dvh flex-col bg-main text-main">
+		<div class="contents">%sveltekit.body%</div>
+	</body>
 </html>
